Fixed spacing and nav bar position

--- a/cordova/climapp/www/css/index.css
+++ b/cordova/climapp/www/css/index.css
@@ -41,7 +41,7 @@ body {
 }
 
 .spacer{
-	font-size:2em;
+	margin-bottom: 2.3em;
 }
 
 /* Portrait layout (default) */
@@ -61,7 +61,7 @@ canvas{
 .panel {
 	background: rgba(255,255,255,0.9);
 	width: 100%;
-    padding: 0.1em 0.5em;
+    padding: 0.1em 0.5em; 
 	margin: 0.5em auto;
 	/*border: 1px solid rgba(0, 0, 0, 0.5);
 	/*box-shadow: 2px 2px rgba(0, 0, 0, 0.2);*/
@@ -197,11 +197,11 @@ img.small{
 }
 
 .panel.settings div {
-    margin-bottom: 1em;
+    margin-bottom: 1.5em;
 }
 
 .panel.settings_other div {
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 .panel.settings.inlineitems#notify {
@@ -211,9 +211,10 @@ img.small{
 /* BEGIN navigation bar style*/
 .navigation {
   position: fixed;
+  top: 0;
   width:100%;
   margin: 0; 
-  background: rgba(255,255,255,0.9);  
+  background: rgba(255,255,255,1);  
   /*background: #7EBFE5; /* Old browsers */
   /*background: -moz-linear-gradient(top, #52A5D5 0%, #A1D4F2 100%); /* FF3.6-15 */
   /*background: -webkit-linear-gradient(top, #52A5D5 0%,#A1D4F2 100%); /* Chrome10-25,Safari5.1-6 */
